# DepthStAr

./: .gitignore  README.md  pyproject.toml
configurations/: config.json  edge_cases.json  targets.json
samples/archieve/: b2sum  base32  chmod  chown  csplit  df  fmt  groups  hostid  id  logname  md5sum  mkfifo  mknod  mktemp  mv  nice  nl  nohup  nproc  pr  rm  sha1sum  sha224sum  sha384sum  sha512sum  sort  split  sum  tail  tee  timeout  touch  truncate  tsort  tty  uname  uptime  who  yes
samples/src/: deep_aac_mul_sym.c
samples/to-test/: [  base64  basename  cat  chcon  chgrp  chroot  cksum  comm  cp  cut  date  dd  deep_aac_mul_sym  dir  dircolors  dirname  du  echo  env  expand  expr  factor  false  fold  getlimits  ginstall  head  join  kill  link  ln  ls  make-prime-list  mkdir  numfmt  od  paste  pathchk  pinky  (+28 more)
src/: ConfigurationLoader.py  DepthStAr.py  Detection.py  ExplosionDetector.py  Logger.py  Statistics.py
src/depthstar/: Detection.py  ExplosionDetector.py  Logger.py  Statistics.py  configuration_loader.py  constants.py  depthstar.py  depthstar_project.py  detection.py  explosion_detector.py  logger.py  old_logger.py  statistics.py  strategy.py
